2007-09-15  Michael Natterer  <mitch@gimp.org>

	Make layer masks work consistently on layers without alpha.
	Fixes bug #475548.

	* app/core/gimplayer.c (gimp_layer_apply_mask): changed to work
	on layers without alpha.

	* app/actions/layers-commands.c (layers_add_mask_response): don't
	automatically add an alpha channel when adding a layer mask.

2007-09-14  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpdatafiles.c: move private functions to the end
	of the file. Added function is_hidden() and use it in
	gimp_datafiles_read_directories(). Moved variables to local
	scopes.

2007-09-14  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-vtable.c (gui_recent_list_add_uri): use the
	untranslated application name. Specify the group "Graphics".

2007-09-14  Sven Neumann  <sven@gimp.org>

	* app/base/tile-pyramid.c: formatting.

	* app/display/gimpdisplayshell-render.c: removed unused include.

2007-09-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/lava.scm: Removed 'from-selection'.
	Reset active layer after calling gimp-selection-save. Modified
	version of patch from Jakub Friedl which fixes bug #476672. Don't
	add alpha if drawable already has alpha. Minor format changes.

2007-09-13  Sven Neumann  <sven@gimp.org>

	* app/gui/Makefile.am
	* app/gui/gui-vtable.c (gui_recent_list_add_uri): use GIMP_COMMAND
	instead of hardcoding "gimp" as the command line used to launch
	this resource. Use the translated full application name.

2007-09-13  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilestore-private.h
	* libgimpwidgets/gimpcolorprofilestore.c
	* libgimpwidgets/gimpcolorprofilecombobox.c: only keep the eight
	most recently used profiles in the history.

2007-09-13  Nils Philippsen  <nphilipp@redhat.com>

	* app/file/file-save.[ch] (file_save)
	* app/dialogs/file-save-dialog.c (file_save_dialog_save_image)
	* app/actions/file-commands.c (file_save_cmd_callback)