@@ -369,11 +369,11 @@ Add an alpha channel to the layer if it doesn't already have one.
 BLURB
 
     $help = <<'HELP';
-This procedure adds an additional component to the specified layer if it does
-not already possess an alpha channel. An alpha channel makes it possible to
-move a layer from the bottom of the layer stack and to clear and erase to
-transparency, instead of the background color. This transforms images of type
-RGB to RGBA, GRAY to GRAYA, and INDEXED to INDEXEDA.
+This procedure adds an additional component to the specified layer if
+it does not already possess an alpha channel. An alpha channel makes
+it possible to clear and erase to transparency, instead of the
+background color. This transforms layers of type RGB to RGBA, GRAY to
+GRAYA, and INDEXED to INDEXEDA.
 HELP
 
     &std_pdb_misc;
@@ -387,6 +387,34 @@ HELP
 	code => <<'CODE'
 {
   gimp_layer_add_alpha (layer);
+}
+CODE
+    );
+}
+
+sub layer_flatten {
+    $blurb = <<'BLURB';
+Remove the alpha channel from the layer if it has one.
+BLURB
+
+    $help = <<'HELP';
+This procedure removes the alpha channel from a layer, blending all
+(partially) transparent pixels in the layer against the background
+color. This transforms layers of type RGBA to RGB, GRAYA to
+GRAY, and INDEXEDA to INDEXED.
+HELP
+
+    &mitch_pdb_misc('2007', '2.4');
+
+    @inargs = (
+	{ name => 'layer', type => 'layer',
+	  desc => 'The layer' }
+    );
+
+    %invoke = (
+	code => <<'CODE'
+{
+  gimp_layer_flatten (layer, context);
 }
 CODE
     );
@@ -922,7 +950,7 @@ CODE
               "gimp-intl.h");
 
 @procs = qw(layer_new layer_new_from_drawable layer_copy
-            layer_add_alpha
+            layer_add_alpha layer_flatten
             layer_scale layer_resize layer_resize_to_image_size
 	    layer_translate layer_set_offsets
             layer_create_mask layer_get_mask layer_from_mask
